# 7mimi-agent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.agent-runner  Dockerfile.scheduler  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yaml
config/: policy.yaml  roles.yaml  schedules.yaml
deploy/k8s/: auth-proxy.yaml  claude-proxy.yaml  kustomization.yaml  scheduler.yaml
docs/: README.md  design.md  overview.md
docs/architecture/: README.md
docs/blog/: Blog.md  index.html  proxy-guide.html
docs/book/: library.md
docs/deployment/: k3s-argocd.md
docs/detailed-design/: README.md
docs/planning/: adr.md  concept-git-relay.md  open-questions.md  (+1 more)
tests/: test_ai_it_topic_runner_auth.py  test_ai_it_topic_runner_publish.py  test_ai_it_topic_runner_real_collection.py  test_ai_it_topic_runner_real_collection_gaps.py  test_claude_digest.py  test_claude_digest_direct_mode.py  test_claude_digest_gaps.py  test_claude_smoke.py  test_collect_x.py  test_collect_x_gaps.py  test_compose_config.py  test_container_runner.py  test_foundation.py  test_invest_digest.py  test_k8s_claude_launcher.py  test_k8s_manifests.py  test_kubernetes_runner.py  test_mcp_session_go_integration.py  test_model_selection.py  test_policy_engine_x_write_deny.py  test_policy_parity.py  test_prompt_injection_fixtures.py  test_proxy_clients.py  test_publish_gaps.py  test_redaction_parity.py  test_repository_writer_publish.py  test_scheduler.py  test_scheduler_notify.py  test_signal_summarizer_gaps.py  test_x_signal_collector_executor.py  test_xmcp_go_integration.py
(+81 files in other folders)
